scrollbar: fix search scroller in mobile view

--- a/public/sass/components/_search.scss
+++ b/public/sass/components/_search.scss
@@ -103,17 +103,19 @@
 }
 
 .search-results-scroller {
+  display: flex;
   position: relative;
-  height: 100%;
 }
 
 .search-results-container {
-  height: 100%;
   display: block;
   padding: $spacer;
   position: relative;
   flex-grow: 10;
   margin-bottom: 1rem;
+
+  // Fix for search scroller in mobile view
+  height: unset;
 
   .label-tag {
     margin-left: 6px;
